[package]
name = "twitter_oauth"
version = "0.1.0"
edition = "2021"


[dependencies]
# tracing-subscriber = "0.3.16"
twitter-v2 = "0.1.8"
async-trait = "0.1"
futures = "0.3"
oauth1 = { version = "0.5", package = "oauth1-request" }
oauth2 = { version = "4.1", optional = true, default-features = false, features = ["reqwest"] }
percent-encoding = "2.1"
pin-project-lite = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1.23.0", features = ["full"] }
url = "2.2"
axum = "0.4.8"
lazy_static = "1.4.0"
rand = "0.8.5"
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
pretty_assertions = "1.2.0"